--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,7 +11,7 @@ nixPkgs = [
 
 [phases.install]
 cmds = [
-    'composer install --optimize-autoloader --no-dev --no-interaction'
+    'composer install --optimize-autoloader --no-dev --no-interaction --ignore-platform-req=ext-zip'
 ]
 
 [phases.build]
