--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -19,7 +19,7 @@ nixPkgs = [
 [phases.install]
 dependsOn = ['setup']
 cmds = [
-    'composer install --optimize-autoloader --no-dev --no-interaction'
+    'composer install --optimize-autoloader --no-dev --no-interaction --ignore-platform-req=ext-zip'
 ]
 
 [phases.build]
