--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,9 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 # Mail Configuration (IMPORTANTE: Configurar para envío de correos)
+# Habilitar envío de correos (true para enviar, false para solo registrar en logs)
+MAIL_ENABLED=true
+
 # Para desarrollo local, usa Mailtrap: https://mailtrap.io
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
@@ -65,6 +68,16 @@ MAIL_FROM_NAME="${APP_NAME}"
 # MAIL_PORT=587
 # MAIL_USERNAME=tu-email@gmail.com
 # MAIL_PASSWORD=tu-app-password
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=noreply@hackzone.com
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# Para producción con Brevo (Sendinblue):
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp-relay.brevo.com
+# MAIL_PORT=587
+# MAIL_USERNAME=tu-email@brevo.com
+# MAIL_PASSWORD=tu-smtp-key-de-brevo
 # MAIL_ENCRYPTION=tls
 # MAIL_FROM_ADDRESS=noreply@hackzone.com
 # MAIL_FROM_NAME="${APP_NAME}"
