--- a/.env.example
+++ b/.env.example
@@ -52,15 +52,21 @@ REDIS_PORT=6379
 # Habilitar envío de correos (true para enviar, false para solo registrar en logs)
 MAIL_ENABLED=true
 
-# Para desarrollo local, usa Mailtrap: https://mailtrap.io
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=your_mailtrap_username
-MAIL_PASSWORD=your_mailtrap_password
-MAIL_ENCRYPTION=tls
+# MAILER: brevo (API - recomendado para producción), smtp (SMTP - puede estar bloqueado en cloud)
+MAIL_MAILER=brevo
 MAIL_FROM_ADDRESS=noreply@hackzone.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+# Brevo API Key (recomendado para Railway/producción)
+BREVO_API_KEY=your-brevo-api-key
+
+# Para desarrollo local con Mailtrap (SMTP): https://mailtrap.io
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=your_mailtrap_username
+# MAIL_PASSWORD=your_mailtrap_password
+# MAIL_ENCRYPTION=tls
 
 # Para producción con Gmail:
 # MAIL_MAILER=smtp
