--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.7",
-        "maatwebsite/excel": "^3.1",
-        "symfony/brevo-mailer": "^7.0"
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
